SERVER-41756 source namespace is not reported correctly if $out is used